test/aws/terraform/public_access_security_groups_port_rule/bastion_server/cloudrail_results.txt

It seems there is some use of Terraform in your code that is not supported by Cloudrail’s version of Terraform and its related providers. 
Please see detailed log below. You may either change your code to correct these issues, or contact us through https://indeni.com/cloudrail-user-support/ and mentioned job_id 'aabdcb04-52d2-4368-b7a6-89973c9545aa'
Error: UnauthorizedOperation: You are not authorized to perform this operation.
	status code: 403, request id: 175324b4-4ad5-40a4-8341-3a7bd859fc3c

  on .terraform/modules/vpc_example_complete-vpc/examples/complete-vpc/main.tf line 5, in data "aws_security_group" "default":
   5: data "aws_security_group" "default" {




